<resources>
    <string name="app_name">PracticaCalculadora161100033</string>


    <string name="c0">0</string>
    <string name="c1">1</string>
    <string name="c2">2</string>
    <string name="c3">3</string>
    <string name="c4">4</string>

    <string name="c5">5</string>
    <string name="c6">6</string>
    <string name="c7">7</string>
    <string name="c8">8</string>
    <string name="c9">9</string>

    <string name="cDiv">/</string>
    <string name="cMul">X</string>
    <string name="cMas">+</string>
    <string name="cMenos">-</string>
    <string name="cPunto">.</string>

    <string name="cDel">DEL</string>
    <string name="cIgual">=</string>
</resources>