<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/seguidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textColor="#FF9800"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textColor="#F44336"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/och"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/c8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/nue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c9"
                android:textSize="18sp" />

            <Button
                android:id="@+id/div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:backgroundTint="#E81123"
                android:text="@string/cDiv"
                android:textSize="18sp"
                app:rippleColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/cinco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/seis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/c6"
                android:textSize="18sp" />

            <Button
                android:id="@+id/multiplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/cMul"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/unooo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/dosss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/tresss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/menosss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/cMenos"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/puntoooo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/cPunto"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ceroooo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/c0"
                android:textSize="18sp" />

            <Button
                android:id="@+id/barrarr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/cDel"
                android:textSize="18sp" />


            <Button
                android:id="@+id/massss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="@string/cMas"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/igualll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="="
                android:textSize="20sp" />

            <Button
                android:id="@+id/cam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="-/+"
                android:textSize="20sp" />

            <Button
                android:id="@+id/raizbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:text="√"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>





</androidx.constraintlayout.widget.ConstraintLayout>